shaderlib_graphics_effect
Signed-off-by: 胡飞 <hufei62@h-partners.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -54,6 +54,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ext/gex_dot_matrix_shader.cpp",
     "src/ext/gex_flow_light_sweep_shader.cpp",
     "src/ext/gex_marshalling_helper.cpp",
+    "src/ext/gex_complex_shader.cpp",
     "src/ge_aibar_shader_filter.cpp",
     "src/ge_external_dynamic_loader.cpp",
     "src/ge_grey_shader_filter.cpp",
