--- a/BUILD.gn
+++ b/BUILD.gn
@@ -68,6 +68,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_visual_effect_container.cpp",
     "src/ge_visual_effect_impl.cpp",
     "src/ge_water_ripple_filter.cpp",
+    "src/ge_edge_light_shader_filter.cpp",
   ]
 
   deps = [ ":utils" ]
