--- a/BUILD.gn
+++ b/BUILD.gn
@@ -63,6 +63,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_magnifier_shader_filter.cpp",
     "src/ge_mesa_blur_shader_filter.cpp",
     "src/ge_render.cpp",
+    "src/ge_sound_wave_filter.cpp",
     "src/ge_system_properties.cpp",
     "src/ge_visual_effect.cpp",
     "src/ge_visual_effect_container.cpp",
