--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -50,6 +50,8 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ext/gex_flow_light_sweep_shader.cpp",
     "${graphics_effect_root}/src/ext/gex_marshalling_helper.cpp",
     "${graphics_effect_root}/src/ge_aibar_shader_filter.cpp",
+    "${graphics_effect_root}/src/ge_color_gradient_shader_filter.cpp",
+    "${graphics_effect_root}/src/ge_displacement_distort_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_external_dynamic_loader.cpp",
     "${graphics_effect_root}/src/ge_grey_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_kawase_blur_shader_filter.cpp",
@@ -57,6 +59,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_magnifier_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_mesa_blur_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_render.cpp",
+    "${graphics_effect_root}/src/ge_ripple_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_system_properties.cpp",
     "${graphics_effect_root}/src/ge_visual_effect.cpp",
     "${graphics_effect_root}/src/ge_visual_effect_container.cpp",
@@ -100,12 +103,15 @@ ohos_unittest("GraphicsEffectTest") {
 
   sources = [
     "ge_aibar_shader_filter_test.cpp",
+    "ge_color_gradient_shader_filter_test.cpp",
+    "ge_displacement_distort_shader_filter_test.cpp",
     "ge_grey_shader_filter_test.cpp",
     "ge_kawase_blur_shader_filter_test.cpp",
     "ge_linear_gradient_blur_shader_filter_test.cpp",
     "ge_magnifier_shader_filter_test.cpp",
     "ge_mesa_blur_shader_filter_test.cpp",
     "ge_render_test.cpp",
+    "ge_ripple_shader_mask_test.cpp",
     "ge_system_properties_test.cpp",
     "ge_visual_effect_container_test.cpp",
     "ge_visual_effect_impl_test.cpp",
