--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -107,6 +107,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_magnifier_shader_filter_test.cpp",
     "ge_mesa_blur_shader_filter_test.cpp",
     "ge_render_test.cpp",
+    "ge_sound_wave_filter_test.cpp",
     "ge_system_properties_test.cpp",
     "ge_visual_effect_container_test.cpp",
     "ge_visual_effect_impl_test.cpp",
