--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -61,6 +61,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_mesa_blur_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_render.cpp",
     "${graphics_effect_root}/src/ge_ripple_shader_mask.cpp",
+    "${graphics_effect_root}/src/ge_sound_wave_filter.cpp",
     "${graphics_effect_root}/src/ge_system_properties.cpp",
     "${graphics_effect_root}/src/ge_visual_effect.cpp",
     "${graphics_effect_root}/src/ge_visual_effect_container.cpp",
