--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -53,6 +53,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_aibar_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_bezier_warp_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_color_gradient_shader_filter.cpp",
+    "${graphics_effect_root}/src/ge_content_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_displacement_distort_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_edge_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_external_dynamic_loader.cpp",
@@ -111,6 +112,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_aibar_shader_filter_test.cpp",
     "ge_bezier_warp_shader_filter_test.cpp",
     "ge_color_gradient_shader_filter_test.cpp",
+    "ge_content_light_shader_filter_test.cpp",
     "ge_displacement_distort_shader_filter_test.cpp",
     "ge_edge_light_shader_filter_test.cpp",
     "ge_grey_shader_filter_test.cpp",
