--- a/config.gni
+++ b/config.gni
@@ -13,6 +13,9 @@
 
 import("//build/ohos.gni")
 
+declare_args() {
+  graphics_effect_feature_upgrade_skia = false
+}
 graphics_effect_root = "//foundation/graphic/graphics_effect"
 
 ge_is_ohos = current_os == "ohos"
