--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -125,6 +125,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_pixel_map_shader_mask_test.cpp",
     "ge_render_test.cpp",
     "ge_ripple_shader_mask_test.cpp",
+    "ge_shader_filter_test.cpp",
     "ge_sound_wave_filter_test.cpp",
     "ge_system_properties_test.cpp",
     "ge_visual_effect_container_test.cpp",
