异形路径流光效果 Signed-off-by: wangziqi<wangziqi9@huawei.com>

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -55,6 +55,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_border_light_shader.cpp",
     "${graphics_effect_root}/src/ge_color_gradient_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_content_light_shader_filter.cpp",
+    "${graphics_effect_root}/src/ge_contour_diagonal_flow_light_shader.cpp",
     "${graphics_effect_root}/src/ge_displacement_distort_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_edge_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_external_dynamic_loader.cpp",
@@ -115,6 +116,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_border_light_shader_test.cpp",
     "ge_color_gradient_shader_filter_test.cpp",
     "ge_content_light_shader_filter_test.cpp",
+    "ge_contour_diagonal_flow_light_shader_test.cpp",
     "ge_displacement_distort_shader_filter_test.cpp",
     "ge_edge_light_shader_filter_test.cpp",
     "ge_grey_shader_filter_test.cpp",
