--- a/BUILD.gn
+++ b/BUILD.gn
@@ -63,6 +63,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_border_light_shader.cpp",
     "src/ge_color_gradient_shader_filter.cpp",
     "src/ge_content_light_shader_filter.cpp",
+    "src/ge_contour_diagonal_flow_light_shader.cpp",
     "src/ge_displacement_distort_shader_filter.cpp",
     "src/ge_edge_light_shader_filter.cpp",
     "src/ge_external_dynamic_loader.cpp",
