--- a/BUILD.gn
+++ b/BUILD.gn
@@ -72,6 +72,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_linear_gradient_blur_shader_filter.cpp",
     "src/ge_magnifier_shader_filter.cpp",
     "src/ge_mesa_blur_shader_filter.cpp",
+    "src/ge_particle_circular_halo_shader.cpp",
     "src/ge_pixel_map_shader_mask.cpp",
     "src/ge_render.cpp",
     "src/ge_radial_gradient_shader_mask.cpp",
