--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -64,6 +64,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_linear_gradient_blur_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_magnifier_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_mesa_blur_shader_filter.cpp",
+    "${graphics_effect_root}/src/ge_particle_circular_halo_shader.cpp",
     "${graphics_effect_root}/src/ge_pixel_map_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_render.cpp",
     "${graphics_effect_root}/src/ge_ripple_shader_mask.cpp",
