--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -68,6 +68,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_pixel_map_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_render.cpp",
     "${graphics_effect_root}/src/ge_ripple_shader_mask.cpp",
+    "${graphics_effect_root}/src/ge_double_ripple_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_sound_wave_filter.cpp",
     "${graphics_effect_root}/src/ge_system_properties.cpp",
     "${graphics_effect_root}/src/ge_visual_effect.cpp",
@@ -75,6 +76,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_visual_effect_impl.cpp",
     "${graphics_effect_root}/src/ge_water_ripple_filter.cpp",
     "${graphics_effect_root}/src/ge_hps_effect_filter.cpp",
+    "${graphics_effect_root}/src/ge_wave_gradient_shader_mask.cpp",
   ]
 
   external_deps = []
