--- a/BUILD.gn
+++ b/BUILD.gn
@@ -59,6 +59,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ext/gex_marshalling_helper.cpp",
     "src/ext/gex_complex_shader.cpp",
     "src/ge_aibar_shader_filter.cpp",
+    "src/ge_aurora_noise_shader.cpp,"
     "src/ge_bezier_warp_shader_filter.cpp",
     "src/ge_border_light_shader.cpp",
     "src/ge_color_gradient_shader_filter.cpp",
