path改vector Signed-off-by: wangziqi<wangziqi9@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -84,6 +84,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_visual_effect_container.cpp",
     "src/ge_visual_effect_impl.cpp",
     "src/ge_water_ripple_filter.cpp",
+    "src/ge_wavy_ripple_light_shader.cpp",
     "src/ge_hps_effect_filter.cpp",
     "src/ge_wave_gradient_shader_mask.cpp",
     "src/ge_double_ripple_shader_mask.cpp",
