--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -80,6 +80,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_water_ripple_filter.cpp",
     "${graphics_effect_root}/src/ge_hps_effect_filter.cpp",
     "${graphics_effect_root}/src/ge_wave_gradient_shader_mask.cpp",
+    "${graphics_effect_root}/src/ge_wavy_ripple_light_shader.cpp",
   ]
 
   external_deps = []
