fix unexpected blur bugs of contour diagnal flow light shader Signed-off-by: panjiao<panjiao5@huawei.com>

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -75,6 +75,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_render.cpp",
     "${graphics_effect_root}/src/ge_ripple_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_double_ripple_shader_mask.cpp",
+    "${graphics_effect_root}/src/ge_shader.cpp",
     "${graphics_effect_root}/src/ge_sound_wave_filter.cpp",
     "${graphics_effect_root}/src/ge_system_properties.cpp",
     "${graphics_effect_root}/src/ge_variable_radius_blur_shader_filter.cpp",
@@ -141,6 +142,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_render_test.cpp",
     "ge_ripple_shader_mask_test.cpp",
     "ge_shader_filter_test.cpp",
+    "ge_shader_test.cpp",
     "ge_sound_wave_filter_test.cpp",
     "ge_system_properties_test.cpp",
     "ge_variable_radius_blur_shader_filter_test.cpp",
