--- a/BUILD.gn
+++ b/BUILD.gn
@@ -85,6 +85,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_shader.cpp",
     "src/ge_sound_wave_filter.cpp",
     "src/ge_system_properties.cpp",
+    "src/ge_tone_mapping_helper.cpp",
     "src/ge_variable_radius_blur_shader_filter.cpp",
     "src/ge_visual_effect.cpp",
     "src/ge_visual_effect_container.cpp",
