--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -78,6 +78,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_shader.cpp",
     "${graphics_effect_root}/src/ge_sound_wave_filter.cpp",
     "${graphics_effect_root}/src/ge_system_properties.cpp",
+    "${graphics_effect_root}/src/ge_tone_mapping_helper.cpp",
     "${graphics_effect_root}/src/ge_variable_radius_blur_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_visual_effect.cpp",
     "${graphics_effect_root}/src/ge_visual_effect_container.cpp",
