TicketNo: DTS2025071020982 Description: update particle_circular_halo and radial_mask shaders Team: EMUI Feature or Bugfix: Feature Binary Source: No PrivateCode(Yes/No): No
Signed-off-by: wuzelun@huawei.com
Signed-off-by: zelunwu <wuzelun@huawei.com>

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -138,6 +138,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_linear_gradient_blur_shader_filter_test.cpp",
     "ge_magnifier_shader_filter_test.cpp",
     "ge_mesa_blur_shader_filter_test.cpp",
+    "ge_particle_circular_halo_shader_test.cpp",
     "ge_pixel_map_shader_mask_test.cpp",
     "ge_render_test.cpp",
     "ge_ripple_shader_mask_test.cpp",
