Gallery effects appearance optimization Signed-off-by:xuyixuan8@huawei.com
Signed-off-by: yixuanxu <xuyixuan8@huawei.com>

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -151,6 +151,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_visual_effect_impl_test.cpp",
     "ge_visual_effect_test.cpp",
     "ge_water_ripple_filter_test.cpp",
+    "ge_wavy_ripple_light_shader_test.cpp",
     "gex_dot_matrix_shader_params_test.cpp",
     "gex_dot_matrix_shader_test.cpp",
     "gex_flow_light_sweep_shader_test.cpp",
