GE Add Trace Signed-off-by: lixiang<lixiang542@h-partners.com>
Signed-off-by: lixiang <lixiang542@h-partners.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -83,6 +83,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_radial_gradient_shader_mask.cpp",
     "src/ge_ripple_shader_mask.cpp",
     "src/ge_shader.cpp",
+    "src/ge_shader_filter.cpp",
     "src/ge_sound_wave_filter.cpp",
     "src/ge_system_properties.cpp",
     "src/ge_tone_mapping_helper.cpp",
@@ -114,6 +115,10 @@ ohos_source_set("graphics_effect_src") {
       "graphic_2d:2d_graphics",
       "hilog:libhilog",
     ]
+  }
+
+  if (!build_ohos_sdk) {
+    external_deps += [ "hitrace:hitrace_meter" ]
   }
 
   defines = []
