--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -76,6 +76,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_ripple_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_double_ripple_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_shader.cpp",
+    "${graphics_effect_root}/src/ge_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_sound_wave_filter.cpp",
     "${graphics_effect_root}/src/ge_system_properties.cpp",
     "${graphics_effect_root}/src/ge_tone_mapping_helper.cpp",
