refactor: Implement pass-based filter composition and streamline HPS effect handling across graphics pipeline.
- Refactor GEFilterComposer to use a pass-based architecture for applying filters and simplify filter composition logic.
- Add header file defining filter composer pass and composable effect classes for graphics effects handling.
- Add GEHpsBuildPass class for building HPS image effects.
- Add GEHpsCompatiblePass class for handling HPS compatible checks.
- Add GEMesaFusionPass class that implements a grey plus kawase blur fusion effect.
- Refactor HPS effect enablement and supported check interface.
- Remove HPS-specific range grouping logics within the GE render class.

Signed-off-by: khaosology <chenhaijian4@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -67,17 +67,22 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_contour_diagonal_flow_light_shader.cpp",
     "src/ge_displacement_distort_shader_filter.cpp",
     "src/ge_direction_light_shader_filter.cpp",
+    "src/ge_double_ripple_shader_mask.cpp",
     "src/ge_edge_light_shader_filter.cpp",
     "src/ge_external_dynamic_loader.cpp",
     "src/ge_filter_composer.cpp",
     "src/ge_frame_gradient_shader_mask.cpp",
     "src/ge_grey_shader_filter.cpp",
+    "src/ge_hps_effect_filter.cpp",
+    "src/ge_hps_build_pass.cpp",
+    "src/ge_hps_compatible_pass.cpp",
     "src/ge_kawase_blur_shader_filter.cpp",
     "src/ge_linear_gradient_blur_shader_filter.cpp",
     "src/ge_linear_gradient_shader_mask.cpp",
     "src/ge_magnifier_shader_filter.cpp",
     "src/ge_mask_transition_shader_filter.cpp",
     "src/ge_mesa_blur_shader_filter.cpp",
+    "src/ge_mesa_fusion_pass.cpp",
     "src/ge_particle_circular_halo_shader.cpp",
     "src/ge_pixel_map_shader_mask.cpp",
     "src/ge_render.cpp",
@@ -94,9 +99,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_visual_effect_impl.cpp",
     "src/ge_water_ripple_filter.cpp",
     "src/ge_wavy_ripple_light_shader.cpp",
-    "src/ge_hps_effect_filter.cpp",
     "src/ge_wave_gradient_shader_mask.cpp",
-    "src/ge_double_ripple_shader_mask.cpp",
   ]
 
   deps = [ ":utils" ]
