--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -64,12 +64,16 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_filter_composer.cpp",
     "${graphics_effect_root}/src/ge_frame_gradient_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_grey_shader_filter.cpp",
+    "${graphics_effect_root}/src/ge_hps_effect_filter.cpp",
+    "${graphics_effect_root}/src/ge_hps_build_pass.cpp",
+    "${graphics_effect_root}/src/ge_hps_compatible_pass.cpp",
     "${graphics_effect_root}/src/ge_kawase_blur_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_linear_gradient_blur_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_linear_gradient_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_magnifier_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_mask_transition_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_mesa_blur_shader_filter.cpp",
+    "${graphics_effect_root}/src/ge_mesa_fusion_pass.cpp",
     "${graphics_effect_root}/src/ge_particle_circular_halo_shader.cpp",
     "${graphics_effect_root}/src/ge_pixel_map_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_radial_gradient_shader_mask.cpp",
@@ -86,7 +90,6 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_visual_effect_container.cpp",
     "${graphics_effect_root}/src/ge_visual_effect_impl.cpp",
     "${graphics_effect_root}/src/ge_water_ripple_filter.cpp",
-    "${graphics_effect_root}/src/ge_hps_effect_filter.cpp",
     "${graphics_effect_root}/src/ge_wave_gradient_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_wavy_ripple_light_shader.cpp",
   ]
