--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -62,6 +62,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_edge_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_external_dynamic_loader.cpp",
     "${graphics_effect_root}/src/ge_filter_composer.cpp",
+    "${graphics_effect_root}/src/ge_frame_gradient_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_grey_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_kawase_blur_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_linear_gradient_blur_shader_filter.cpp",
@@ -135,6 +136,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_contour_diagonal_flow_light_shader_test.cpp",
     "ge_displacement_distort_shader_filter_test.cpp",
     "ge_edge_light_shader_filter_test.cpp",
+    "ge_frame_gradient_shader_mask_test.cpp",
     "ge_grey_shader_filter_test.cpp",
     "ge_kawase_blur_shader_filter_test.cpp",
     "ge_linear_gradient_blur_shader_filter_test.cpp",
