fix: type registeration and unit tests
- Fix registeration of LinearGradientBlurFilter, WaterRippleFilter and WavyRippleLightShader
- Fix type deduction in Box and Unbox by stripping reference and cv qualifiers to support universal references properly.
- Fix perfect forwarding in GEFilterParamsWrapper constructor.
- Replace string return type with string_view in GetLogName method to improve performance by avoiding unnecessary string copies.
- Remove unused header inclusion and obsolete HpsSupportEffect method from render interface.
- Add debug log in Run method when HPS filter is composed.
- Add comprehensive unit tests for GE filter composer and related passes with coverage for effect retrieval, HPS and mesa fusion, compatibility checks, and proper parameter validation.
- Add comprehensive unit tests for GEFilterParams box/unbox functionality, type registration, and invalid unboxing behavior across multiple filter types and shared pointer scenarios.

Signed-off-by: khaosology <chenhaijian4@huawei.com>

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -139,6 +139,8 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_contour_diagonal_flow_light_shader_test.cpp",
     "ge_displacement_distort_shader_filter_test.cpp",
     "ge_edge_light_shader_filter_test.cpp",
+    "ge_filter_composer_test.cpp",
+    "ge_filter_type_test.cpp",
     "ge_frame_gradient_shader_mask_test.cpp",
     "ge_grey_shader_filter_test.cpp",
     "ge_kawase_blur_shader_filter_test.cpp",
