--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -58,6 +58,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_content_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_direction_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_contour_diagonal_flow_light_shader.cpp",
+    "${graphics_effect_root}/src/ge_dispersion_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_displacement_distort_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_edge_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_external_dynamic_loader.cpp",
@@ -137,6 +138,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_color_gradient_shader_filter_test.cpp",
     "ge_content_light_shader_filter_test.cpp",
     "ge_contour_diagonal_flow_light_shader_test.cpp",
+    "ge_dispersion_shader_filter_test.cpp",
     "ge_displacement_distort_shader_filter_test.cpp",
     "ge_edge_light_shader_filter_test.cpp",
     "ge_filter_composer_test.cpp",
