--- a/BUILD.gn
+++ b/BUILD.gn
@@ -73,6 +73,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_external_dynamic_loader.cpp",
     "src/ge_filter_composer.cpp",
     "src/ge_frame_gradient_shader_mask.cpp",
+    "src/ge_frosted_glass_shader_filter.cpp",
     "src/ge_grey_shader_filter.cpp",
     "src/ge_hps_build_pass.cpp",
     "src/ge_hps_compatible_pass.cpp",
