--- a/BUILD.gn
+++ b/BUILD.gn
@@ -94,6 +94,8 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_use_effect_shader_mask.cpp",
     "src/sdf/ge_sdf_shader_filter.cpp",
     "src/sdf/ge_sdf_effects.cpp",
+    "src/sdf/ge_sdf_pixelmap_shader_shape.cpp",
+    "src/sdf/ge_sdf_rrect_shader_shape.cpp",
     "src/sdf/ge_sdf_shader_shape.cpp",
     "src/sdf/ge_sdf_tree_processor.cpp",
     "src/sdf/ge_sdf_union_op_shader_shape.cpp",
