--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -55,6 +55,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/sdf/ge_sdf_shader_filter.cpp",
     "${graphics_effect_root}/src/sdf/ge_sdf_effects.cpp",
     "${graphics_effect_root}/src/sdf/ge_sdf_shader_shape.cpp",
+    "${graphics_effect_root}/src/sdf/ge_sdf_border_shader.cpp",
     "${graphics_effect_root}/src/sdf/ge_sdf_shadow_shader.cpp",
     "${graphics_effect_root}/src/sdf/ge_sdf_tree_processor.cpp",
     "${graphics_effect_root}/src/sdf/ge_sdf_union_op_shader_shape.cpp",
