add circle flowlight effect
Signed-off-by: YangSanzhi <yanglei375@huawei.com>

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -61,6 +61,7 @@ ohos_source_set("graphics_effect_test_src") {
 
     "${graphics_effect_root}/src/ge_bezier_warp_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_border_light_shader.cpp",
+    "${graphics_effect_root}/src/ge_circle_flowlight_effect.cpp",
     "${graphics_effect_root}/src/ge_color_gradient_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_content_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_direction_light_shader_filter.cpp",
@@ -145,6 +146,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_aurora_noise_shader_test.cpp",
     "ge_bezier_warp_shader_filter_test.cpp",
     "ge_border_light_shader_test.cpp",
+    "ge_circle_flowlight_effect_test.cpp",
     "ge_color_gradient_shader_filter_test.cpp",
     "ge_content_light_shader_filter_test.cpp",
     "ge_contour_diagonal_flow_light_shader_test.cpp",
