--- a/BUILD.gn
+++ b/BUILD.gn
@@ -62,6 +62,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_aurora_noise_shader.cpp",
     "src/ge_bezier_warp_shader_filter.cpp",
     "src/ge_border_light_shader.cpp",
+    "src/ge_circle_flowlight_effect.cpp",
     "src/ge_color_gradient_shader_filter.cpp",
     "src/ge_content_light_shader_filter.cpp",
     "src/ge_contour_diagonal_flow_light_shader.cpp",
