--- a/BUILD.gn
+++ b/BUILD.gn
@@ -69,6 +69,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_dispersion_shader_filter.cpp",
     "src/ge_displacement_distort_shader_filter.cpp",
     "src/ge_direction_light_shader_filter.cpp",
+    "src/ge_direct_draw_on_canvas_pass.cpp",
     "src/ge_double_ripple_shader_mask.cpp",
     "src/ge_edge_light_shader_filter.cpp",
     "src/ge_external_dynamic_loader.cpp",
