--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -70,6 +70,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_content_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_direction_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_contour_diagonal_flow_light_shader.cpp",
+    "${graphics_effect_root}/src/ge_direct_draw_on_canvas_pass.cpp",
     "${graphics_effect_root}/src/ge_dispersion_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_displacement_distort_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_edge_light_shader_filter.cpp",
