--- a/BUILD.gn
+++ b/BUILD.gn
@@ -94,6 +94,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_radial_gradient_shader_mask.cpp",
     "src/ge_ripple_shader_mask.cpp",
     "src/ge_use_effect_shader_mask.cpp",
+    "src/sdf/ge_sdf_clip_shader.cpp",
     "src/sdf/ge_sdf_shader_filter.cpp",
     "src/sdf/ge_sdf_effects.cpp",
     "src/sdf/ge_sdf_shader_shape.cpp",
