--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -52,6 +52,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ext/gex_complex_shader.cpp",
     "${graphics_effect_root}/src/ge_aibar_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_aurora_noise_shader.cpp",
+    "${graphics_effect_root}/src/sdf/ge_sdf_clip_shader.cpp",
     "${graphics_effect_root}/src/sdf/ge_sdf_shader_filter.cpp",
     "${graphics_effect_root}/src/sdf/ge_sdf_effects.cpp",
     "${graphics_effect_root}/src/sdf/ge_sdf_shader_shape.cpp",
@@ -169,6 +170,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_image_shader_mask_test.cpp",
     "ge_render_test.cpp",
     "ge_ripple_shader_mask_test.cpp",
+    "ge_sdf_clip_shader_test.cpp",
     "ge_sdf_shadow_shader_test.cpp",
     "ge_shader_filter_test.cpp",
     "ge_shader_test.cpp",
