--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -84,6 +84,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_grid_warp_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_hps_build_pass.cpp",
     "${graphics_effect_root}/src/ge_hps_effect_filter.cpp",
+    "${graphics_effect_root}/src/ge_hps_upscale_pass.cpp",
     "${graphics_effect_root}/src/ge_image_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_kawase_blur_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_linear_gradient_blur_shader_filter.cpp",
