--- a/BUILD.gn
+++ b/BUILD.gn
@@ -100,6 +100,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_use_effect_shader_mask.cpp",
     "src/sdf/ge_sdf_border_shader.cpp",
     "src/sdf/ge_sdf_clip_shader.cpp",
+    "src/sdf/ge_sdf_edge_light.cpp",
     "src/sdf/ge_sdf_pixelmap_shader_shape.cpp",
     "src/sdf/ge_sdf_rrect_shader_shape.cpp",
     "src/sdf/ge_sdf_shadow_shader.cpp",
