--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -182,6 +182,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_sdf_rrect_shader_shape_test.cpp",
     "ge_sdf_shader_shape_test.cpp",
     "ge_sdf_shadow_shader_test.cpp",
+    "ge_sdf_edge_light_test.cpp",
     "ge_sdf_transform_shader_shape_test.cpp",
     "ge_sdf_pixelmap_shader_shape_test.cpp",
     "ge_sdf_union_op_shader_shape_test.cpp",
