--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -67,6 +67,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_circle_flowlight_effect.cpp",
     "${graphics_effect_root}/src/ge_color_gradient_effect.cpp",
     "${graphics_effect_root}/src/ge_color_gradient_shader_filter.cpp",
+    "${graphics_effect_root}/src/ge_color_remap_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_content_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_direction_light_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_contour_diagonal_flow_light_shader.cpp",
@@ -80,6 +81,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_frosted_glass_blur_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_frosted_glass_effect.cpp",
     "${graphics_effect_root}/src/ge_frosted_glass_shader_filter.cpp",
+    "${graphics_effect_root}/src/ge_gamma_correction_filter.cpp",
     "${graphics_effect_root}/src/ge_grey_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_grid_warp_shader_filter.cpp",
     "${graphics_effect_root}/src/ge_hps_build_pass.cpp",
@@ -157,6 +159,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_cache_provider_test.cpp",
     "ge_circle_flowlight_effect_test.cpp",
     "ge_color_gradient_shader_filter_test.cpp",
+    "ge_color_remap_shader_filter_test.cpp",
     "ge_content_light_shader_filter_test.cpp",
     "ge_contour_diagonal_flow_light_shader_test.cpp",
     "ge_dispersion_shader_filter_test.cpp",
@@ -165,6 +168,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_filter_composer_test.cpp",
     "ge_frame_gradient_shader_mask_test.cpp",
     "ge_frosted_glass_shader_filter_test.cpp",
+    "ge_gamma_correction_filter_test.cpp",
     "ge_grey_shader_filter_test.cpp",
     "ge_grid_warp_shader_filter_test.cpp",
     "ge_kawase_blur_shader_filter_test.cpp",
