transition filter for EffectKit
Signed-off-by: yangjh7799 <yangjunhao9@huawei.com>

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -109,6 +109,7 @@ ohos_source_set("graphics_effect_test_src") {
     "${graphics_effect_root}/src/ge_tone_mapping_helper.cpp",
     "${graphics_effect_root}/src/ge_use_effect_shader_mask.cpp",
     "${graphics_effect_root}/src/ge_variable_radius_blur_shader_filter.cpp",
+    "${graphics_effect_root}/src/ge_water_droplet_transition_filter.cpp",
     "${graphics_effect_root}/src/ge_visual_effect.cpp",
     "${graphics_effect_root}/src/ge_visual_effect_container.cpp",
     "${graphics_effect_root}/src/ge_visual_effect_impl.cpp",
@@ -175,6 +176,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_linear_gradient_blur_shader_filter_test.cpp",
     "ge_magnifier_shader_filter_test.cpp",
     "ge_map_color_by_brightness_shader_filter_test.cpp",
+    "ge_mask_transition_shader_filter_test.cpp",
     "ge_mesa_blur_shader_filter_test.cpp",
     "ge_particle_circular_halo_shader_test.cpp",
     "ge_pixel_map_shader_mask_test.cpp",
@@ -200,6 +202,7 @@ ohos_unittest("GraphicsEffectTest") {
     "ge_visual_effect_impl_test.cpp",
     "ge_visual_effect_test.cpp",
     "ge_water_ripple_filter_test.cpp",
+    "ge_water_droplet_transition_filter_test.cpp",
     "ge_wavy_ripple_light_shader_test.cpp",
     "gex_dot_matrix_shader_params_test.cpp",
     "gex_dot_matrix_shader_test.cpp",
