update: 更新文件 BUILD.gn
Signed-off-by: quanyuchen <quanyuchen2@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -123,6 +123,7 @@ ohos_source_set("graphics_effect_src") {
     "src/ge_visual_effect_impl.cpp",
     "src/ge_water_droplet_transition_filter.cpp",
     "src/ge_water_ripple_filter.cpp",
+    "src/ge_wave_disturb_shader_mask.cpp",
     "src/ge_wavy_ripple_light_shader.cpp",
     "src/ge_wave_gradient_shader_mask.cpp",
   ]
